# roarm_qr_pickplace

./: README.md  allowed_guests.txt  requirements.txt
event_ui/: app.py  qr_detection.py
event_ui/static/: style.css
event_ui/templates/: index.html
src/roarm_else/moveit_servo/: CMakeLists.txt  package.xml
src/roarm_else/moveit_servo/include/moveit_servo/: servo_node.hpp
src/roarm_else/moveit_servo/include/moveit_servo/utils/: logger.h  logger.hpp
src/roarm_else/moveit_servo/src/: collision_monitor.cpp  servo.cpp  servo_node.cpp
src/roarm_else/moveit_servo/src/utils/: command.cpp  common.cpp  logger.cpp
src/roarm_main/roarm_control/: package.xml  setup.cfg  setup.py
src/roarm_main/roarm_control/roarm_control/: pick_place_node.py
src/roarm_main/roarm_description/: CMakeLists.txt  package.xml
src/roarm_main/roarm_description/launch/: display.launch.py  gazebo.launch.py
src/roarm_main/roarm_description/urdf/roarm_m2/: materials.xacro  roarm_m2.gazebo  roarm_m2.trans  roarm_m2.xacro
src/roarm_main/roarm_description/urdf/roarm_m3/: roarm_m3.xacro
src/roarm_main/roarm_driver/: package.xml
src/roarm_main/roarm_driver/roarm_driver/: roarm_driver.py
src/roarm_main/roarm_moveit/: CMakeLists.txt  package.xml
src/roarm_main/roarm_moveit/config/roarm_m2/: initial_positions.yaml  kinematics.yaml  roarm_m2.ros2_control.xacro  roarm_m2.srdf  roarm_m2.urdf.xacro
src/roarm_main/roarm_moveit/config/roarm_m3/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  roarm_m3.ros2_control.xacro  roarm_m3.srdf  roarm_m3.urdf.xacro
src/roarm_main/roarm_moveit_cmd/: CMakeLists.txt  package.xml
src/roarm_main/roarm_moveit_cmd/include/roarm_moveit_cmd/: roarm_server.hpp  solver.hpp
src/roarm_main/roarm_moveit_cmd/launch/: command_control.launch.py
src/roarm_main/roarm_moveit_cmd/rviz/: command_control.rviz
src/roarm_main/roarm_moveit_cmd/src/: draw.py  getposecmd_moveit.cpp  getposecmd_tf.cpp  roarmserver.cpp  setgrippercmd.cpp
src/roarm_main/roarm_moveit_ikfast_plugins/: CMakeLists.txt  package.xml  roarm_m2_hand_moveit_ikfast_plugin.xml  roarm_m3_hand_moveit_ikfast_plugin.xml
src/roarm_main/roarm_moveit_ikfast_plugins/src/: roarm_m2_hand_ikfast_solver.cpp  roarm_m2_hand_moveit_ikfast_plugin.cpp  roarm_m3_hand_ikfast_solver.cpp  roarm_m3_hand_moveit_ikfast_plugin.cpp
src/roarm_main/roarm_moveit_mtc_demo/: CMakeLists.txt  package.xml
src/roarm_main/roarm_moveit_mtc_demo/config/: roarm_config.yaml
src/roarm_main/roarm_moveit_mtc_demo/include/roarm_moveit_mtc_demo/: pick_place_task.h
src/roarm_main/roarm_moveit_mtc_demo/launch/: demo.launch.py  run.launch.py
src/roarm_main/roarm_moveit_mtc_demo/rviz/: mtc.rviz
src/roarm_main/roarm_moveit_mtc_demo/src/: cartesian.cpp  cartesian_modular.cpp  keyboard_input.py  pick_place.cpp  pick_place_parameters.yaml  pick_place_task.cpp  pick_place_task.txt  postplanning_pick_place.txt  qr_detection.py
src/roarm_main/roarm_moveit_servo/: CMakeLists.txt  package.xml
src/roarm_main/roarm_moveit_servo/config/: roarm_config.yaml
src/roarm_main/roarm_moveit_servo/launch/: servo_control.launch.py
src/roarm_main/roarm_moveit_servo/rviz/: servo_control.rviz
src/roarm_main/roarm_moveit_servo/src/: keyboardcontrol.cpp
src/roarm_main/roarm_msgs/: CMakeLists.txt  package.xml
src/roarm_main/roarm_msgs/srv/: GetPoseCmd.srv  MoveCircleCmd.srv  MoveJointCmd.srv  MoveLineCmd.srv
