<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roarm_moveit_cmd</name>
  <version>0.1.0</version>
  <description>
     An package with all the configuration and launch files for using the roarm with the MoveIt Motion Planning Framework
  </description>
  <maintainer email="effectsmachine@outlook.com">roarm</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>roarm_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>


  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
